--- a/javascript/assets/css/slider.css
+++ b/javascript/assets/css/slider.css
@@ -1,10 +1,8 @@
-@import url('https://webfontworld.github.io/knps/KNPSKkomi.css');
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'KNPSKkomi';
+    font-family: 'NexonLv1Gothic';
 }
 
 body {
@@ -13,43 +11,43 @@ body {
 }
 
 body.img01 {
-    background: url(../img/effect_bg01@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg01-min.jpg) no-repeat center / cover;
 }
 
 body.img02 {
-    background: url(../img/effect_bg02@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg02-min.jpg) no-repeat center / cover;
 }
 
 body.img03 {
-    background: url(../img/effect_bg03@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg03-min.jpg) no-repeat center / cover;
 }
 
 body.img04 {
-    background: url(../img/effect_bg04@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg04-min.jpg) no-repeat center / cover;
 }
 
 body.img05 {
-    background: url(../img/effect_bg05@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg05-min.jpg) no-repeat center / cover;
 }
 
 body.img06 {
-    background: url(../img/effect_bg06@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg06-min.jpg) no-repeat center / cover;
 }
 
 body.img07 {
-    background: url(../img/effect_bg07@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg07-min.jpg) no-repeat center / cover;
 }
 
 body.img08 {
-    background: url(../img/effect_bg08@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg08-min.jpg) no-repeat center / cover;
 }
 
 body.img09 {
-    background: url(../img/effect_bg09@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg09-min.jpg) no-repeat center / cover;
 }
 
 body.img10 {
-    background: url(../img/effect_bg10@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg10-min.jpg) no-repeat center / cover;
 }
 
 body::after {
@@ -59,7 +57,7 @@ body::after {
     top: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(214, 81, 81, 0.2);
+    background: rgba(23, 20, 88, 0.386);
     z-index: -1;
 }
 
@@ -71,6 +69,21 @@ img {
 a {
     color: #fff;
     text-decoration: none;
+}
+
+/* scroll */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1f224a26;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(69, 71, 100, 0.321);
+    border-radius: 20px;
 }
 
 /* header */
@@ -87,7 +100,7 @@ a {
 }
 
 #header p {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 #header li {
@@ -101,8 +114,8 @@ a {
     width: 30px;
     height: 30px;
     text-align: center;
-    line-height: 33px;
-    font-size: 16px;
+    line-height: 30px;
+    font-size: 14px;
 }
 
 /* footer */
@@ -112,7 +125,7 @@ a {
     bottom: 20px;
     border: 1px solid #fff;
     border-radius: 40px;
-    padding: 10px 20px 5px;
+    padding: 10px 30px;
     font-size: 14px;
 }
 
@@ -124,7 +137,7 @@ a {
     border: 1px solid #fff;
     border-radius: 50px;
     display: inline-block;
-    padding: 15px 20px 10px 20px;
+    padding: 10px 20px;
     position: absolute;
     right: 20px;
     bottom: 20px;
@@ -141,52 +154,46 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    visibility: hidden;
+    transform: scale(0);
 }
 
-.modal__cont.show {
-    visibility: visible;
-}
-
-/*  요소를 안보이게 하는 방법
-        1. display: none;       (애니메이션X, 영억X)
-        2. opacity: 0;          (애니메이션O, 영역O)
-        3. visibility: hidden;  (애니메이션X, 영억X)
-        4. width: 0; height: 0; (애니메이션X, 영억X) : blind
+/* 요소를 안보이게 하는 방법
+    1. display: none;       (애니메이션X, 영역X)
+    2. opacity: 0;          (애니메이션O, 영역O)
+    3. visibility: hidden;  (애니메이션X, 영역X)
+    4. transform: scale(0); (애니메이션O, 영역X)
+    5. width: 0; height: 0; (애니메이션X, 영역X) : blind
 */
+
 .modal__box {
-    width: 100%;
-    max-width: 800px;
+    width: 70%;
+
     margin: 0 auto;
-    height: 600px;
-    background-color: #fff;
-    border-radius: 0.5rem;
-    background-color: #fff;
+    height: 70vh;
+    border-radius: 5px;
     box-shadow: 0 10px 20px -5px hsl(180deg 2% 10%);
+    transform: scale(0);
 }
 
 .modal__box .title {
     padding-inline: 1rem;
-    cursor: grab;
-    background-color: #36110E;
+    background-color: #1b1c2e;
     display: flex;
     align-items: center;
     color: #fff;
     height: 50px;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    left: 0;
-    top: 0;
 }
 
 .modal__box .title .dot {
     width: 15px;
     height: 15px;
-    background-color: #F3EC2F;
+    background-color: #3b3d63;
     display: inline-block;
     border-radius: 50%;
     position: relative;
-    margin-left: 30px;
+    margin-left: 2rem;
 }
 
 .modal__box .title .dot::before {
@@ -196,7 +203,7 @@ a {
     top: 0;
     width: 15px;
     height: 15px;
-    background-color: #F32525;
+    background-color: #3b3d63;
     border-radius: 50%;
 }
 
@@ -207,14 +214,15 @@ a {
     top: 0;
     width: 15px;
     height: 15px;
-    background-color: #51EC46;
+    background-color: #3b3d63;
     border-radius: 50%;
 }
 
 .modal__box .title .plus {
-    background-color: #705A58;
-    padding: 0.5rem 0.5rem 0 0.5rem;
+    background: #282936;
+    padding: 0.5rem 0.5rem 0.3rem 0.5rem;
     border-radius: 0.5rem;
+    color: #7a7d9d;
 }
 
 .modal__box .title .tabs {
@@ -223,40 +231,41 @@ a {
 }
 
 .modal__box .title .tabs>div {
-    color: hsl(39, 33%, 66%);
-    background-color: hsl(0, 0%, 20%);
-    padding: 0.35rem 0.8rem 0rem 0.8rem;
+    color: #7a7d9d;
+    background-color: #282936;
+    padding: 0.35rem 0.8rem 0.25rem 0.8rem;
     margin-right: 0.5rem;
     display: flex;
     align-items: center;
     border-radius: 0.4rem;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .modal__box .title .tabs>div.active {
-    background-color: #C9685F;
+    background-color: #1f224a;
 }
 
 .modal__box .title .tabs>div em {
-    font-style: normal
+    font-style: normal;
 }
 
 .modal__box .title .tabs>div .favicon {
     margin-right: 0.4rem;
-    margin-top: 0.3rem;
+    margin-top: 0.2rem;
 }
 
 .modal__box .title .tabs>div .close {
-    margin-left: 5rem;
+    margin-left: 4rem;
 }
 
 .modal__box .cont {
     background-color: #282936;
-    height: 550px;
+    height: 100%;
+    overflow-y: auto;
     box-sizing: border-box;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
-    overflow-y: auto;
 }
 
 .modal__box .cont>div {
@@ -265,24 +274,112 @@ a {
 
 .modal__box .cont>div.active {
     display: block;
+    height: 100%;
 }
 
 .modal__close {
     position: absolute;
     right: 20px;
     top: 20px;
-    background-color: #F32525;
-    padding: 1rem 1rem 0.4rem 1rem;
+    background-color: #1f224a;
+    padding: 1rem 1rem 0.8rem 1rem;
     border-radius: 5px;
-    box-shadow: 0 5px 7px -5px hsl(180deg 2% 10%);
+    box-shadow: 0 5px 7px -5px rgba(25, 26, 26, 0.698);
     cursor: pointer;
     transition: all 0.3s;
 }
 
 .modal__close:hover {
-    background-color: #C9685F;
+    background-color: #33377d;
 }
 
 .modal__close svg {
     color: #fff;
+}
+
+/* 모달 애니 */
+.modal__cont.show {
+    animation: foldOut 1s ease forwards;
+    /* 전체배경 */
+}
+
+.modal__cont.show.hide {
+    animation: foldin 0.3s 0.5s ease backwards;
+    /* 스크립트 박스 */
+}
+
+.modal__cont.show .modal__close {
+
+    /* 닫기버튼 */
+}
+
+.modal__cont.show .modal__box {
+
+    animation: zoomOut 0.5s 1s ease forwards;
+}
+
+.modal__cont.show.hide .modal__box {
+
+    animation: zoomin 0.5s ease forwards;
+}
+
+.modal__cont.show.hide .modal__close {
+    display: none;
+}
+
+@keyframes foldOut {
+    0% {
+        transform: scalex(0) scaley(0.001);
+    }
+
+    50% {
+        transform: scale(1) scaley(0.001);
+    }
+
+    100% {
+        transform: scale(1) scaley(1);
+    }
+}
+
+@keyframes foldin {
+    0% {
+        transform: scalex(0) scaley(0.001);
+    }
+
+    50% {
+        transform: scale(1) scaley(0.001);
+    }
+
+    100% {
+        transform: scale(1) scaley(1);
+    }
+}
+
+@keyframes zoomOut {
+    0% {
+        transform: scalex(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes zoomin {
+    0% {
+        transform: scalex(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+
+@media(max-width:1100px) {}
+
+@media(max-width:600px) {
+    .modal__box {
+        width: 96%;
+    }
 }
