--- a/site1/assets/css/header02.css
+++ b/site1/assets/css/header02.css
@@ -1,12 +1,11 @@
 #headerType {
   width: 1920px;
-  height: 70px;
+  height: px;
   margin: 0 auto;
 }
 .header__inner {
   width: 100%;
-  height: 70px;
-  display: flex;
+  height: 100px;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
@@ -19,10 +18,11 @@
   background: #fff;
 }
 .header__logo {
-  width: 10%;
+  width: 100%;
   font-size: 30px;
   font-weight: 700;
-
+  text-align: center;
+  padding: 15px;
   text-transform: uppercase;
 }
 .header__logo em {
@@ -31,7 +31,7 @@
   font-weight: 400;
 }
 .header__menu {
-  width: 60%;
+  width: 100%;
   text-align: center;
 }
 .header__menu li {
@@ -43,23 +43,12 @@
   transition: background-color 0.3s;
 }
 .header__menu li a:hover {
-  background-color: #f1f1f1;
-  border-radius: 5px;
+  text-decoration-line: underline;
 }
 .header__member {
-  width: 20%;
-  text-align: right;
+
 }
 .header__member a {
-  font-size: 16px;
-  border: 1px solid #000;
-  padding: 10px 30px;
-  border-radius: 50px;
-  transition: all 0.3s;
-}
-.header__member a:hover {
-  background-color: #000;
-  color: #fff;
 }
 .header__ham {
   position: absolute;
