--- a/site1/assets/css/slider02.css
+++ b/site1/assets/css/slider02.css
@@ -1,115 +1,216 @@
-.text__innner {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.slider__inner {
+  margin-top: 70px;
 }
-
-.text {
-  width: 32%;
-  margin-bottom: 2%;
-  padding: 20px;
-  box-sizing: border-box;
-  border-radius: 10px;
-  transition: background 0.4s;
-}
-
-.text:hover {
-  background: #f5f5f5;
-}
-
-.text__title {
-  font-size: 24px;
-  line-height: 1;
-  margin-bottom: 10px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+.slider {
   position: relative;
-  padding-top: 75px;
 }
-
-.text__title::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 60px;
-  height: 60px;
-  background: url(../img/text_icon.svg);
+.slider__img {
+  background: url(../img/slider02_bg01.jpg) no-repeat center / cover;
 }
-
-.text.t1 .text__title::before {
-  background-position: 0 0;
+.slider__img .desc {
+  width: 100%;
+  margin: 0 auto;
+  padding: 100px 20px;
 }
-
-.text.t2 .text__title::before {
-  background-position: -60px 0;
-}
-
-.text.t3 .text__title::before {
-  background-position: -120px 0;
-}
-
-.text.t4 .text__title::before {
-  background-position: -180px 0;
-}
-
-.text.t5 .text__title::before {
-  background-position: -240px 0;
-}
-
-.text.t6 .text__title::before {
-  background-position: -300px 0;
-}
-
-.text__desc {
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 1.4;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  color: #666;
-  margin-bottom: 20px;
-}
-
-.text_btn {
+.slider__img .desc span {
   font-size: 16px;
+  background-color: #fff;
+  padding: 1px 14px 0 14px;
+  border-radius: 30px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+.slider__img .desc h3 {
+  font-size: 110px;
+  font-weight: 300;
   line-height: 1;
-  text-decoration: underline;
-  text-underline-position: under;
-  color: #666;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 16px;
+  margin-left: -8px;
+}
+.slider__img .desc p {
+  font-size: 20px;
+  font-weight: 300;
+  color: #fff;
+  line-height: 1.35;
+  margin-bottom: 130px;
+}
+.slider__img .desc .btn {
+}
+.slider__img .desc .btn a {
+  font-size: 16px;
+  background-color: #fff;
+  padding: 11px 50px;
+  display: inline-block;
+}
+.slider__img .desc .btn a.black {
+  background: #000;
+  color: #fff;
+}
+.slider__arrow a {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 56px;
+  background-image: url(../img/slider_icon.svg);
+}
+.slider__arrow a.left {
+  left: 20px;
+}
+.slider__arrow a.right {
+  right: 20px;
+  background-position: -50px 0;
+}
+.slider__dot {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 25px;
+}
+.slider__dot a {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background-image: url(../img/slider_icon.svg);
+  background-position: -20px -70px;
+}
+.slider__dot a.active {
+  background-position: 0 -70px;
+}
+.slider__dot a.play {
+  background-position: -40px -70px;
+}
+.slider__dot a.stop {
+  background-position: -60px -70px;
 }
 
-.text__top {
+/* swiper */
+.swiper-slide.img1 {
+  background: url(../img/slider_bg01.jpg) no-repeat center / cover;
+}
+.swiper-slide.img2 {
+  background: url(../img/slider_bg02.jpg) no-repeat center / cover;
+}
+.swiper-slide.img3 {
+  background: url(../img/slider_bg03.jpg) no-repeat center / cover;
+}
+
+.swiper-slide .desc {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 100px 20px;
+  box-sizing: border-box;
+}
+.swiper-slide .desc span {
+  font-size: 16px;
+  background-color: #fff;
+  padding: 1px 14px 0 14px;
+  border-radius: 30px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+.swiper-slide .desc h3 {
+  font-size: 110px;
+  font-weight: 300;
+  line-height: 1;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 16px;
+  margin-left: -8px;
+}
+.swiper-slide .desc p {
+  font-size: 20px;
+  font-weight: 300;
+  color: #fff;
+  line-height: 1.35;
+  margin-bottom: 130px;
+}
+.swiper-slide .desc .btn {
+}
+.swiper-slide .desc .btn a {
+  font-size: 16px;
+  background-color: #fff;
+  padding: 11px 50px;
+  display: inline-block;
+}
+.swiper-slide .desc .btn a.black {
+  background: #000;
+  color: #fff;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  width: 30px !important;
+  height: 56px !important;
+  background-image: url(../img/slider_icon.svg);
+}
+.swiper-button-next {
+  background-position: -50px 0;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  opacity: 0;
+}
+
+.swiper-pagination-bullet {
+  display: inline-block;
+  width: 16px !important;
+  height: 16px !important;
+  background-image: url(../img/slider_icon.svg) !important;
+  background-position: -20px -70px !important;
+  background-color: transparent !important;
+  opacity: 1 !important;
+}
+.swiper-pagination-bullet-active {
+  background-position: 0 -70px !important;
+}
+.swiper-button {
+  position: absolute;
+  left: 50%;
+  margin-left: 40px;
+  bottom: 24px;
+  z-index: 1000;
   display: flex;
+  cursor: pointer;
 }
-
-.text__bottom {
-  display: flex;
+.swiper-button-stop {
+  background-image: url(../img/slider_icon.svg);
+  background-position: -60px -70px;
+  width: 16px;
+  height: 16px;
 }
-
-.section > h2 {
-  margin-bottom: 60px;
+.swiper-button-play {
+  background-image: url(../img/slider_icon.svg);
+  background-position: -40px -70px;
+  width: 16px;
+  height: 16px;
 }
-
+/* media */
 @media (max-width: 960px) {
-  .text {
-    width: 49%;
-    background: #f5f5f5;
+  .swiper-slide .desc {
+    width: 100%;
+    text-align: center;
+  }
+  .swiper-slide .desc h3 {
+    font-size: 70px;
   }
 }
 @media (max-width: 600px) {
-  .text__title {
-    font-size: 20px;
+  .swiper-slide .desc {
+    padding: 80px 0;
   }
-  .text__desc {
+  .swiper-slide .desc h3 {
+    font-size: 30px;
+  }
+  .swiper-slide .desc p {
     font-size: 16px;
+    margin-bottom: 40px;
   }
-}
-@media (max-width: 480px) {
-  .text {
-    width: 100%;
+  .swiper-slide .desc .btn a {
+    padding: 10px 25px;
   }
 }
