--- a/site1/assets/css/reset.css
+++ b/site1/assets/css/reset.css
@@ -61,7 +61,11 @@ a {
   text-decoration: none;
   color: #000;
 }
-
+/* 가로모드 초기화 */
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
 /* 목록 초기화 */
 li,
 ol,
