--- a/layout/layout01_01.html
+++ b/layout/layout01_01.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>레이아웃</title>
     <!--
         float 레이아웃 (반응형)
@@ -11,62 +11,57 @@
         grid 레이아웃 (반응형)
      -->
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-        } 
-      
-        #body{
-            background-color:#FFE0B2
-        }
-        #wrap{
-            width: 1160px;
-            margin: 0 auto;
-        }
-        #header{
-            width: 1160px;
-            height: 100px;
-            background-color:#FFE0B2
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-        }
-        #nav{
-            width: 1160px;
-            height: 100px;
-            background-color:#FFCC80;
-        }
-        #aside{
-            width: 400px;
-            height: 780px;
-            background-color:#FFB74D;
-            float: left;
-        }
-        #section{
-            width: 760px;
-            height: 780px;
-            background-color:#FFA726;
-            float: left;
-        }
-        #footer{
-            width: 1160px;
-            height: 100px;
-            background-color:#FF9800;
-            clear: both;
-        }
-
-        
-       
-
+      #body {
+        background-color: #ffe0b2;
+      }
+      #wrap {
+        width: 1160px;
+        margin: 0 auto;
+      }
+      #header {
+        width: 1160px;
+        height: 100px;
+        background-color: #ffe0b2;
+      }
+      #nav {
+        width: 1160px;
+        height: 100px;
+        background-color: #ffcc80;
+      }
+      #aside {
+        width: 400px;
+        height: 780px;
+        background-color: #ffb74d;
+        float: left;
+      }
+      #section {
+        width: 760px;
+        height: 780px;
+        background-color: #ffa726;
+        float: left;
+      }
+      #footer {
+        width: 1160px;
+        height: 100px;
+        background-color: #ff9800;
+        clear: both;
+      }
     </style>
-</head>
-        <body>
-            <div id="wrap">
-                <div id="header"></div>
-                <div id="nav"></div>
-                <div id="aside"></div>
-                <div id="section"></div>
-                <div id="footer"></div>
-            </div>
-        </body>
+  </head>
+  <body>
+    <div id="wrap">
+      <div id="header"></div>
+      <div id="nav"></div>
+      <div id="aside"></div>
+      <div id="section"></div>
+      <div id="footer"></div>
+    </div>
+  </body>
 </html>
 
 <!-- layout01_01 float 방식 레이아웃 
@@ -75,10 +70,3 @@
      layout01_04 flex 방식 반응형 레이아웃
      layout01_05 grid 방식 레이아웃
      layout01_06 grid 방식 반응형 레이아웃   -->
-
-
-
-
-
-
-
