--- a/layout/layout01_06.html
+++ b/layout/layout01_06.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>레이아웃</title>
     <!--
         float 레이아웃 (반응형)
@@ -11,91 +11,86 @@
         grid 레이아웃 (반응형)
      -->
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-        } 
-       
-        #body{
-            background-color:#FFE0B2
-        }
-        #wrap{
-            width:1160px;
-            margin: 0 auto;
-            display: grid;
-            grid-template-areas: 
-            "header header"
-            "nav nav"
-            "aside section"
-            "footer footer";
-            grid-template-columns: 30% 70%;
-            grid-template-rows: 100px 100px 780px 100px;
-        }
-        #header{
-            background-color:#FFE0B2;
-            grid-area: header;  
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-        }
-        #nav{
-            background-color:#FFCC80;
-            grid-area: nav;       
-        }
+      #body {
+        background-color: #ffe0b2;
+      }
+      #wrap {
+        width: 1160px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-areas:
+          "header header"
+          "nav nav"
+          "aside section"
+          "footer footer";
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 100px 100px 780px 100px;
+      }
+      #header {
+        background-color: #ffe0b2;
+        grid-area: header;
+      }
+      #nav {
+        background-color: #ffcc80;
+        grid-area: nav;
+      }
 
-        #aside{
-            background-color:#FFB74D; 
-            grid-area: aside;   
-        }
+      #aside {
+        background-color: #ffb74d;
+        grid-area: aside;
+      }
+      #section {
+        background-color: #ffa726;
+        grid-area: section;
+      }
+      #footer {
+        background-color: #ff9800;
+        grid-area: footer;
+      }
 
-        #section{
-            background-color:#FFA726;
-            grid-area: section;   
+      @media (max-width: 1920px) {
+        #wrap {
+          width: 1160px;
         }
-
-        #footer{
-            background-color:#FF9800; 
-            grid-area: footer;   
-        }  
-
-        @media(max-width: 1920px) {
-            #wrap {
-                width: 1160px;
-            }
+      }
+      @media (max-width: 1280px) {
+        #wrap {
+          width: 96%;
         }
-        @media(max-width: 1280px) {
-            #wrap {
-                width: 96%;
-            }
+      }
+      @media (max-width: 768px) {
+        #wrap {
+          width: 100%;
         }
-        @media(max-width: 768px) {
-            #wrap {
-                width: 100%;
-            }
+      }
+      @media (max-width: 480px) {
+        #wrap {
+          grid-template-areas:
+            "header"
+            "nav"
+            "aside"
+            "section"
+            "footer";
+          grid-template-columns: 100%;
+          grid-template-rows: 100px 100px 165px 315px 100px;
         }
-        @media(max-width: 480px) {
-                #wrap{
-                grid-template-areas: 
-                "header"
-                "nav"
-                "aside"
-                "section"
-                "footer";
-                grid-template-columns: 100%;
-                grid-template-rows: 100px 100px 165px 315px 100px;
-            }
-        }
-
-
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="wrap">
-        <header id="header"></header>
-        <nav id="nav"></nav>
-        <aside id="aside"></aside>
-        <section id="section"></section>
-        <footer id="footer"></footer>
+      <header id="header"></header>
+      <nav id="nav"></nav>
+      <aside id="aside"></aside>
+      <section id="section"></section>
+      <footer id="footer"></footer>
     </div>
-</body>
+  </body>
 </html>
 
 <!-- layout01_01 float 방식 레이아웃 
@@ -104,4 +99,3 @@
      layout01_04 flex 방식 반응형 레이아웃
      layout01_05 grid 방식 레이아웃
      layout01_06 grid 방식 반응형 레이아웃   -->
-
