--- a/layout/layout02_02.html
+++ b/layout/layout02_02.html
@@ -1,113 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        #body{
-            background-color: #E8F5E9;
-        }
-        #wrap{
-            width: 1200px;
-            margin: 0 auto;
-        }
-        #header{
-            width: 100%;
-            height: 100px;
-            background-color: #C8E6C9;
-            margin: 0 auto;
-        }
-        #nav{
-            width: 100%;
-            height: 100px;
-            background-color: #A5D6A7;
-        }
-        #main{
-            width: 100%;
-            height: 780px;
-            overflow: hidden;
-        }
-        #aside{
-            width: 30%;
-            height: 780px;
-            background-color: #81C784;
-            float: left;  
-        }
-        #section{
-            width: 40%;
-            height: 780px;
-            background-color: #66BB6A;
-            float: left;  
-        }
-        #article{
-            width: 30%;
-            height: 780px;
-            background-color: #4CAF50;
-            float: left; 
-        }
-           
-        #footer{
-            width: 100%;
-            height: 100px;
-            background-color: #43A047;  
-        }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      #body {
+        background-color: #e8f5e9;
+      }
+      #wrap {
+        width: 1200px;
+        margin: 0 auto;
+      }
+      #header {
+        width: 100%;
+        height: 100px;
+        background-color: #c8e6c9;
+        margin: 0 auto;
+      }
+      #nav {
+        width: 100%;
+        height: 100px;
+        background-color: #a5d6a7;
+      }
+      #main {
+        width: 100%;
+        height: 780px;
+        overflow: hidden;
+      }
+      #aside {
+        width: 30%;
+        height: 780px;
+        background-color: #81c784;
+        float: left;
+      }
+      #section {
+        width: 40%;
+        height: 780px;
+        background-color: #66bb6a;
+        float: left;
+      }
+      #article {
+        width: 30%;
+        height: 780px;
+        background-color: #4caf50;
+        float: left;
+      }
 
-        @media(max-width: 1300px) {
+      #footer {
+        width: 100%;
+        height: 100px;
+        background-color: #43a047;
+      }
+
+      @media (max-width: 1300px) {
         #wrap {
-            width: 96%;
+          width: 96%;
         }
-        }
-        @media(max-width: 768px) {
+      }
+      @media (max-width: 768px) {
         #wrap {
-            width: 100%;
+          width: 100%;
         }
-        #aside{
-            width: 30%;
-            height: 630px;
+        #aside {
+          width: 30%;
+          height: 630px;
         }
         #section {
-            width: 70%;
-            height: 630px;
+          width: 70%;
+          height: 630px;
         }
-        #article{
-            width: 100%;
-            height: 150px;
+        #article {
+          width: 100%;
+          height: 150px;
         }
-        }
-        @media(max-width: 480px) {
-        #aside{
-            width: 100%;
-            height: 200px;
+      }
+      @media (max-width: 480px) {
+        #aside {
+          width: 100%;
+          height: 200px;
         }
         #section {
-            width: 100%;
-            height: 430px;
+          width: 100%;
+          height: 430px;
         }
-        }
-        </style>
-</head>
-
-<body>
+      }
+    </style>
+  </head>
+  <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
-        <div id="main">
-            <div id="aside"></div>
-            <div id="section"></div>
-            <div id="article"></div>
-        </div>
-        <div id="footer"></div>
+      <div id="header"></div>
+      <div id="nav"></div>
+      <div id="main">
+        <div id="aside"></div>
+        <div id="section"></div>
+        <div id="article"></div>
+      </div>
+      <div id="footer"></div>
     </div>
-
-  
-    
-</body>
+  </body>
 </html>
 <!-- layout02_01 float 방식 레이아웃 
      layout02_02 float 방식 반응형 레이아웃
