--- a/layout/layout03_01.html
+++ b/layout/layout03_01.html
@@ -1,93 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<style>
-    *{
+    <style>
+      * {
         margin: 0;
         padding: 0;
-    }
-    body{
-        background-color: #E1F5FE;
-    }
-    #wrap{
-    width: 1200px;
-    margin: 0 auto;
-    }
-    #header{
-    width: 1200px;
-    height: 100px;
-    background-color: #B3E5FC;
-    }
-    #nav{
-    width: 1200px;
-    height: 100px;
-    background-color: #81D4FA;
-    }
-    #main{
-    width: 1200px;
-    /* height: 780px; */
-    overflow: hidden;
-    }
-    #aside{
-    width: 300px;
-    height: 780px;
-    background-color: #4FC3F7;
-    float: left;
-    }
-    #article1{
-    width: 900px;
-    height: 260px;
-    background-color: #29B6F6;
-    float: left;
-    }
-    #article2{
-    width: 900px;
-    height: 260px;
-    background-color: #03A9F4;
-    float: left;
-    }
-    #article3{
-    width: 900px;
-    height: 260px;
-    background-color: #039BE5;
-    float: left;
-    }
-    #footer{
-    width: 1200px;
-    height: 100px;
-    background-color: #0288D1;
-    }
-    /* clearfix */
-    .clearfix::before,
-    .clearfix::after{
+      }
+      body {
+        background-color: #e1f5fe;
+      }
+      #wrap {
+        width: 1200px;
+        margin: 0 auto;
+      }
+      #header {
+        width: 1200px;
+        height: 100px;
+        background-color: #b3e5fc;
+      }
+      #nav {
+        width: 1200px;
+        height: 100px;
+        background-color: #81d4fa;
+      }
+      #main {
+        width: 1200px;
+        /* height: 780px; */
+        overflow: hidden;
+      }
+      #aside {
+        width: 300px;
+        height: 780px;
+        background-color: #4fc3f7;
+        float: left;
+      }
+      #article1 {
+        width: 900px;
+        height: 260px;
+        background-color: #29b6f6;
+        float: left;
+      }
+      #article2 {
+        width: 900px;
+        height: 260px;
+        background-color: #03a9f4;
+        float: left;
+      }
+      #article3 {
+        width: 900px;
+        height: 260px;
+        background-color: #039be5;
+        float: left;
+      }
+      #footer {
+        width: 1200px;
+        height: 100px;
+        background-color: #0288d1;
+      }
+      /* clearfix */
+      .clearfix::before,
+      .clearfix::after {
         content: "";
         display: block;
         line-height: 0;
-    }
-    .clearfix::after{
-        clear:both
-    }
-       
-</style>
-</head>
-<body>
+      }
+      .clearfix::after {
+        clear: both;
+      }
+    </style>
+  </head>
+  <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
-        <div id="main" class="clearfix">
-            <div id="aside"></div>
-            <div id="article1"></div>
-            <div id="article2"></div>
-            <div id="article3"></div>
-        </div>
-        <div id="footer"></div>
+      <div id="header"></div>
+      <div id="nav"></div>
+      <div id="main" class="clearfix">
+        <div id="aside"></div>
+        <div id="article1"></div>
+        <div id="article2"></div>
+        <div id="article3"></div>
+      </div>
+      <div id="footer"></div>
     </div>
-    
-</body>
+  </body>
 </html>
 <!-- layout03_01 float 방식 레이아웃 
      layout03_02 float 방식 반응형 레이아웃
