--- a/site1/assets/css/slider03.css
+++ b/site1/assets/css/slider03.css
@@ -145,8 +145,9 @@
     position: absolute;
     width: 23px;
     height: 23px;
-    left: 164px;
+    left: 464px;
     top: 335px;
+    border-radius: 50%;
     background: #4857ec;
 }
 .swiper-slide .dots .d2 {
@@ -155,7 +156,7 @@
     height: 18px;
     left: 680px;
     top: 79px;
-
+    border-radius: 50%;
     background: #f7e36d;
 }
 .swiper-slide .dots .d3 {
@@ -164,7 +165,7 @@
     height: 46px;
     left: calc(50% - 46px / 2 - 97px);
     top: 127px;
-
+    border-radius: 50%;
     background: #2fefb1;
 }
 .swiper-slide .dots .d4 {
@@ -172,8 +173,8 @@
     width: 35px;
     height: 35px;
     right: 455px;
-    top: 570px;
-
+    top: 270px;
+    border-radius: 50%;
     background: #ff3344;
 }
 .swiper-slide .dots .d5 {
@@ -181,8 +182,8 @@
     width: 32px;
     height: 32px;
     left: 1770px;
-    top: 538px;
-
+    top: 438px;
+    border-radius: 50%;
     background: #2fefb1;
 }
 
