--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -137,6 +137,23 @@ li {
     color: var(--htmlColor);
     /* 확인필요 */
 }
+.search__list em {
+    float: right;
+    font-size: normal;
+}
+.search__list .line {
+    margin-top: 50px 0;
+}
+.search__list .line li {
+    background-color: #e3eaf5;
+    padding: 10px 30px;
+    margin-bottom: 5px;
+    border-radius: 50px;
+}
+.search__list .line li:hover {
+    background-color: #d3eafa;
+    cursor: pointer;
+}
 .search__info {
     text-align: right;
     margin-bottom: 30px;
@@ -175,6 +192,18 @@ li {
     background-repeat: no-repeat;
     background-position: 22px 17px;
 }
+.search__click li {
+    display: inline-block;
+    border: 1px solid var(--htmlColor);
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 5px 0;
+}
+.search__click li a:hover {
+    background-color: var(--htmlColor);
+    color: #fff;
+}
+
 @media (max-width: 600px) {
     .search__wrap {
         padding: 20px;
