--- a/portfolio02/css/style.css
+++ b/portfolio02/css/style.css
@@ -20,7 +20,6 @@ a {
   font-size: 20px;
 }
 
-
 .contaienr {
   width: 96%;
   margin: 0 auto;
@@ -73,9 +72,10 @@ nav a {
   text-transform: uppercase;
 }
 
-.keyword {}
+.keyword {
+}
 
-.keyword>div {
+.keyword > div {
   font-size: 3vw;
   display: inline-block;
   margin-right: 2vw;
@@ -83,7 +83,7 @@ nav a {
   position: relative;
 }
 
-.keyword>div .modal {
+.keyword > div .modal {
   background: rgba(211, 205, 190, 0.7);
   backdrop-filter: blur(10px);
   width: 80%;
@@ -96,10 +96,9 @@ nav a {
   border-radius: 20px;
   padding: 2%;
   transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
-
 }
 
-.keyword>div .modal h3 {
+.keyword > div .modal h3 {
   line-height: 1;
   font-size: 30px;
   margin-bottom: 30px;
@@ -139,7 +138,7 @@ nav a {
 /* webstandard */
 .keyword .webstandard .modal .desc .left {
   width: 100%;
-  height: 500px;
+  height: 700px;
   overflow: auto;
 }
 
@@ -147,13 +146,12 @@ nav a {
   width: 60%;
   font-size: 16px;
   margin-top: 30px;
-
 }
 
 /* photoshop_website */
 .keyword .photoshop_website .modal .desc .left {
   width: 100%;
-  height: 500px;
+  height: 700px;
   overflow: auto;
 }
 
@@ -165,7 +163,7 @@ nav a {
 /* banner_design01 */
 .keyword .banner_design01 .modal .desc .left {
   width: 100%;
-  height: 500px;
+  height: 700px;
   overflow: auto;
 }
 
@@ -177,7 +175,7 @@ nav a {
 /* banner_design02 */
 .keyword .banner_design02 .modal .desc .left {
   width: 100%;
-  height: 500px;
+  height: 700px;
   overflow: auto;
 }
 
@@ -187,13 +185,11 @@ nav a {
 }
 
 /* banner_design03 */
-.keyword .banner_design03 .modal .desc {}
+.keyword .banner_design03 .modal .desc {
+}
 
 .keyword .banner_design03 .modal .desc .left {
   width: 100%;
-
-
-
 }
 
 .keyword .banner_design03 .modal .desc .right {
@@ -217,38 +213,38 @@ nav a {
 }
 
 /* img */
-.keyword>div .modal .desc .left img {
+.keyword > div .modal .desc .left img {
   border-radius: 10px;
 }
 
-.webstandard>.modal>.desc>.left img {
+.webstandard > .modal > .desc > .left img {
   width: 100%;
 }
 
-.banner_design01>.modal>.desc>.left img {
+.banner_design01 > .modal > .desc > .left img {
   margin-bottom: 5px;
 }
 
-.banner_design02>.modal>.desc>.left img {
+.banner_design02 > .modal > .desc > .left img {
   margin-bottom: 5px;
 }
 
-.banner_design03>.modal>.desc>.left img {
+.banner_design03 > .modal > .desc > .left img {
   width: 47%;
   margin-bottom: 5px;
   margin-right: 5px;
   display: inline;
 }
 
-.banner_design03>.modal>.desc>.left img:last-child {
+.banner_design03 > .modal > .desc > .left img:last-child {
   width: 95%;
 }
 
-.Illustrator_icon>.modal>.desc>.left img {
+.Illustrator_icon > .modal > .desc > .left img {
   width: 90%;
 }
 
-.keyword>div .modal .close {
+.keyword > div .modal .close {
   position: absolute;
   right: 30px;
   top: 20px;
@@ -257,7 +253,7 @@ nav a {
 
 /* bot */
 .bot {
-  width: 100%;
+  width: 95%;
   text-align: right;
   padding-bottom: 10px;
   position: absolute;
@@ -275,7 +271,6 @@ nav a {
   position: relative;
   border-radius: 50px;
   background-color: #333;
-
 }
 
 .desc .bot .code {
@@ -288,15 +283,13 @@ nav a {
   position: relative;
   border-radius: 50px;
   background-color: #333;
-
 }
 
-
-.keyword>div.open .modal {
+.keyword > div.open .modal {
   top: 10%;
 }
 
-.keyword>div span {
+.keyword > div span {
   position: absolute;
   top: 0px;
   left: 50%;
@@ -308,13 +301,13 @@ nav a {
   transition: all 0.3s ease-in-out;
 }
 
-.keyword>div a:hover+span {
+.keyword > div a:hover + span {
   transform: translateX(-50%) translateY(-15px);
   opacity: 1;
 }
 
-.keyword>div a:before,
-.keyword>div a:after {
+.keyword > div a:before,
+.keyword > div a:after {
   content: "";
   border-bottom: solid 2px #000;
   position: absolute;
@@ -322,20 +315,20 @@ nav a {
   width: 0;
 }
 
-.keyword>div a:before {
+.keyword > div a:before {
   left: 0;
 }
 
-.keyword>div a:after {
+.keyword > div a:after {
   right: 0;
 }
 
-.keyword>div a:hover:before,
-.keyword>div a:hover:after {
+.keyword > div a:hover:before,
+.keyword > div a:hover:after {
   width: 50%;
 }
 
-.keyword>div a:before,
-.keyword>div a:after {
+.keyword > div a:before,
+.keyword > div a:after {
   transition: all 0.2s ease;
 }
